--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <button class="Objetivos">Objetivo - Beltrano </button>
     <button class = "objetivos">Formados</button>
     </section>div>
-    <div class="identificação>
+    <div class="aba conteúdo ativa">
+        <h3>Descrição do objetivo de <span class="nomes">Dhaniele</span>span></h3><h3></h3></span></h3>
+    </div>
         
-</section>
+</section> clas
 </body>
 </html>
